--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     <img src="images/logo.jpg">
   </div>
     </div> 
-    <section>
+    <main>
+      <h1> Trusted weather Day Forecast</h1>
+      <div class="background-image">
+        <img src="images/hero.jpg">
+      </div>
+    </main>
      
       
     </section>
